--- a/cloudfunctions-aliyun/cool/package.json
+++ b/cloudfunctions-aliyun/cool/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "use-common",
+  "name": "cool",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,6 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "hello-common": "file:../common/hello-common"
+    "require-all": "^3.0.0",
+    "require-dir": "^1.2.0",
+    "require-dir-all": "^0.4.15",
+    "utils": "file:../common/utils",
+    "verify": "file:../common/verify"
   }
 }
