--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
 	"version": "0.0.1",
 	"dependencies": {
 		"cl-crud2": "^0.0.12",
+		"core-js": "2.0.0",
+		"echarts": "^4.8.0",
 		"element-ui": "^2.13.0",
 		"moment": "^2.27.0",
-		"svg-sprite-loader": "^5.0.0"
+		"vue-echarts": "^5.0.0-beta.0"
 	}
 }
