--- a/cloudfunctions-aliyun/cool/package.json
+++ b/cloudfunctions-aliyun/cool/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "db": "file:../common/db",
     "require-all": "^3.0.0",
     "require-dir": "^1.2.0",
     "require-dir-all": "^0.4.15",
