--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.0.1",
 	"dependencies": {
 		"cl-crud2": "^0.0.12",
+		"clipboard": "^2.0.6",
 		"core-js": "2.0.0",
 		"echarts": "^4.8.0",
 		"element-ui": "^2.13.0",
