--- a/cloudfunctions-aliyun/common/utils/package.json
+++ b/cloudfunctions-aliyun/common/utils/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ipip-ipdb": "^0.3.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.19",
     "md5": "^2.2.1",
