--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
 	"name": "cool-admin-cloud",
 	"version": "0.0.1",
 	"dependencies": {
+		"@tinymce/tinymce-vue": "^3.2.2",
 		"cl-crud2": "^0.0.17",
 		"clipboard": "^2.0.6",
 		"core-js": "2.0.0",
 		"echarts": "^4.8.0",
 		"element-ui": "^2.13.0",
 		"moment": "^2.27.0",
+		"tinymce": "^5.4.1",
 		"vue-echarts": "^5.0.0-beta.0"
 	}
 }
