--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
 	"version": "0.1.0",
 	"dependencies": {
 		"@tinymce/tinymce-vue": "^3.2.2",
-		"cl-crud2": "^0.2.12",
+		"cl-admin-crud": "^1.6.0",
 		"clipboard": "^2.0.6",
 		"core-js": "2.0.0",
+		"dayjs": "^1.10.4",
 		"echarts": "^4.8.0",
-		"element-ui": "^2.13.0",
-		"moment": "^2.27.0",
+		"element-ui": "^2.15.1",
 		"tinymce": "^5.4.1",
 		"vue-echarts": "^5.0.0-beta.0"
 	}
